# receipt-toku

./: README.md  check_models.py  config.py  main.py  requirements.txt  schemas.py
backend/: .env.example  check_models.py  config.py  main.py  pyproject.toml  schemas.py
backend/db/: auth.py  db.py
backend/model/: generate.py
backend/schemas/: estat.py
backend/services/: __init__.py  estat.py  market_data.py  parser.py
docker/: .env.example  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  nginx.conf
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: DebugPanel.tsx  Dropzone.tsx  EditItemForm.tsx  ErrorBox.tsx  ItemTable.tsx  Loading.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/src/components/ui/: button.tsx  sheet.tsx
frontend/src/lib/: api.ts  mockApi.ts  storage.ts  types.ts
frontend/src/pages/: Edit.tsx  History.tsx  Home.tsx  Result.tsx
frontend/src/styles/: global.css
services/: __init__.py  estat.py  ocr.py  parser.py  vision.py
supabase/: config.toml
supabase/migrations/: 20251221000000_init.sql
